# overbot

./: .gitignore  Cargo.toml  README.md
src/: logging.rs  main.rs  web_server.rs
src/discord/: mod.rs  shards.rs
