[package]
name = "overbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.7.4"
clap = { version = "4.5", features = ["derive", "env"] }
cryptex = { version = "1.8.1", optional = true }
reqwest = "0.12.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
twilight-cache-inmemory = "0.16.0-rc.1"
twilight-gateway = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"
twilight-mention = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
twilight-standby = "0.16.0-rc.1"
twilight-util = "0.16.0-rc.1"

[features]
keyring = ["cryptex"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
